Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -419,3 +419,67 @@ oc expose service webserver-app4
 oc patch service webserver-app4 -n chapter4 --type=json -p='[{"op": "replace", "path": "/spec/selector/deployment", "value": "anishrana2001"}]'
 ```
 ### Do it by yourself.
+
+
+# Question: Produce the output.
+
+### Prepare the lab.
+```
+oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
+oc new-project chapter5
+oc new-app --name webserver-app5 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+
+oc patch deployment webserver-app5 -p '{"spec": {"template": {"spec": {"containers": [{"name": "webserver-app5", "resources": {"limits": {"cpu": "2", "memory": "18Gi"}}}]}}}}'
+oc delete replicasets.apps $(oc get replicasets.apps | awk '$4~ /1/ {print $1}')
+```
+
+## Solution.
+
+## Go to the project first. 
+```
+oc project chapter5
+```
+```
+oc get all
+```
+## You observe pod is in pending state. 
+## Check the events. 
+```
+oc get events --sort-by='.lastTimestamp' | tail
+```
+
+## From the output, you get to know that there is some issue with CPU or Memory. Both are part of `resources`. Remember this keyword.
+### Check the deployment.
+```
+oc get deployment/webserver-app5 -o yaml | grep -iA 5 resources
+```
+
+### Edite the Deployment and modify the memory to 300Mi 
+```
+oc edit deployment/webserver-app5
+```
+
+### Execute the below command again.
+```
+oc get deployment/webserver-app5 -o yaml | grep -iA 5 resources
+```
+
+### Check the pods.
+```
+oc get all
+```
+
+### Expose the service.
+```
+oc expose  service webserver-app5
+```
+
+### Check the route.
+```
+oc get route
+```
+### Finally, Post checks.....
+```
+curl webserver-app5-chapter5.apps.ocp4.example.com | head
+```
+
