Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -421,9 +421,9 @@ oc patch service webserver-app4 -n chapter4 --type=json -p='[{"op": "replace", "
 ### Do it by yourself.
 
 
-# Question: Produce the output.
+# Question 5. An application is running on the chapter5 project. There is one pod, which is in pending state. Your task is it must generate the output.
 
-### Prepare the lab.
+### Prepare the lab for question 5.
 ```
 oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
 oc new-project chapter5
