Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -483,3 +483,12 @@ oc get route
 curl webserver-app5-chapter5.apps.ocp4.example.com | head
 ```
 
+
+## How to clear the Lab?
+```
+oc delete project chapter1
+oc delete project chapter2
+oc delete project chapter3
+oc delete project chapter4
+oc delete project chapter5
+```
