Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -48,3 +48,6 @@ oc new-project apple
 ```
 oc create rolebinding admin1 --clusterrole=admin --user=suraj -n apple
 ```
+
+
+![image](https://github.com/user-attachments/assets/238e9ad6-a197-4c3a-a664-1f37069019b1)
