Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -21,7 +21,7 @@ sudo mv /tmp/script.sh /usr/bin/
 - "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
 - The application should produce the output.
-- You can use the script to generate the certificate `/data/script.sh`
+- You can use the script to generate the certificate `sh script.sh`
 ---
 ### Solution:
 ### Go to the give project `quart`
