--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -1,12 +1,13 @@
-
 # Create a service using VirtualMachine load balancing
 ### In the Project `kiwi` create the following Objects:
 
 - Using the temaple `tmprhl9small` which you created previously, instantiate two identical VirtualMachine named `web1` and `web2`
 - Create a service name `ex316-kiwi-svc`
     Type: NodePort
-    Pod Selector: app-flix
-- TCP Port 23 of each VM is connected to any worker node port 30023
-- Create a route named flix-route so that above service is made available at address flix.kiwi.example.com
-- Running the following command line on workerbench.example.com telnet flix.kiwi.example.com
-- Effectively results in an ASCII animated sequence being played on the terminal by either VM. If you are not familiar with telnet you can use netcat instead
+    Pod Selector: app-web
+- TCP Port 3306 of each VM is connected to any worker node port 3306
+- Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
+- Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
+---
+
+### Solution:
