--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -11,3 +11,34 @@
 ---
 
 ### Solution:
+
+### Step 1. Select the project `kiwi` in the RedHat console 
+### Step 2. Create the VMs `web1` & `web2` from the template ``
+### Step 3. Add the label on VM and then restart it.
+
+```
+oc edit vm/web1
+oc edit vm/web1
+virtctl restart web1
+virtctl restart web2
+```
+
+### Step 4. Verify the VM's Label.
+```
+oc get vm,vmi -l app=web
+```
+- Create a service name `ex316-kiwi-svc`
+    Type: NodePort
+    Pod Selector: app=web
+    TCP Port 3306 of each VM is connected to any worker node port 23
+### Step 5. Create a service and modify the NodeSelector. In the end check the endpoints. It should point to web1 and web2 VM's IP.
+```
+oc create service nodeport ex316-kiwi-svc --tcp=23:3306
+oc edit service/ex316-kiwi-svc
+oc get endpoints ex316-kiwi-svc
+```
+- Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
+### Create a route.
+```
+oc expose service ex316-kiwi-svc --hostname=anishrana2001-lb.apps.ocp4.example.com
+```
