--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -28,9 +28,9 @@ virtctl restart web2
 oc get vm,vmi -l app=web
 ```
 - Create a service name `ex316-kiwi-svc`
-    Type: NodePort
-    Pod Selector: app=web
-    TCP Port 3306 of each VM is connected to any worker node port 23
+    - Type: NodePort
+    - Pod Selector: app=web
+    - TCP Port 3306 of each VM is connected to any worker node port 23
 ### Step 5. Create a service and modify the NodeSelector. In the end check the endpoints. It should point to web1 and web2 VM's IP.
 ```
 oc create service nodeport ex316-kiwi-svc --tcp=23:3306
