--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -10,16 +10,44 @@ oc project kiwi
 ### Check the VM and VMi
 ```
 oc get vm,vmi
+oc get datavolume,pvc
 ```
 ### As  per the question, we have to clone the datavolume of `web1` VM. When you execute the below command, please check the "partition".
 
 ```
 virtctl guestfs web1
 ```
-```
+
 #####  virtctl guestfs web1
 #####  Use image: registry.redhat.io/container-native-virtualization/libguestfs-tools-rhel9@sha256:92261bf1f5085f5e9ac8531af7a780c3fc40cdf1e30539968e90f1fe8bc68f2d 
 ##### The PVC has been mounted at **/dev/vda**
 ##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:  
 ##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:
+
+### Execute the below command.
+```
+virt-sysprep -a /dev/vda
+exit
+```
+### Post checks!!
+```
+oc get datavolume,pvc
+```
+## OR 
+```
+oc get dv,pvc
+```
+### Its time to create the clone of Base image.
+- Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-copy` by using Data Volumes
+```
+virtctl create clone -h
+```
+
+```
+virtctl create clone --source-name web1 --target-name web1-clonevm --name web1-copy | oc apply -f -
+```
+
+## Check the VirtualMachineClone
+```
+oc get virtualmachineclone
 ```
