--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -20,7 +20,9 @@ virtctl guestfs web1
 ---
 #####  virtctl guestfs web1
 #####  Use image: registry.redhat.io/container-native-virtualization/libguestfs-tools-rhel9@sha256:92261bf1f5085f5e9ac8531af7a780c3fc40cdf1e30539968e90f1fe8bc68f2d 
- The PVC has been mounted at **/dev/vda**
+                             ________________
+ The PVC has been mounted at | **/dev/vda** |
+                             ----------------
 ##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:  
 ##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:
 ---
