--- a/DO316/11. MigrationVM.md
+++ b/DO316/11. MigrationVM.md
@@ -18,3 +18,75 @@ oc label nodes worker02 datacenter=paris
 
 ## In the key and value, use the label given in the question.
 ![image](https://github.com/user-attachments/assets/fa0dfeef-58cb-4d86-8a4a-87fe5197b3b6)
+
+
+
+## Post checks!!! 
+### Go to the project.
+```
+oc project apple
+```
+### Identify where is this VM running.
+```
+oc get vm,vmi
+```
+### For your references. 
+```
+[student@workstation ~]$ oc get vm,vmi
+NAME                                        AGE   STATUS    READY
+virtualmachine.kubevirt.io/mariadb-server   60m   Running   True
+
+NAME                                                AGE   PHASE     IP           NODENAME   READY
+virtualmachineinstance.kubevirt.io/mariadb-server   65s   Running   10.11.0.19   worker02   True
+```
+### Check the nodes stauts.
+```
+oc get nodes
+```
+### For your references. 
+```
+[student@workstation ~]$ oc get nodes
+NAME       STATUS   ROLES                         AGE    VERSION
+master01   Ready    control-plane,master,worker   224d   v1.29.6+aba1e8d
+master02   Ready    control-plane,master,worker   224d   v1.29.6+aba1e8d
+master03   Ready    control-plane,master,worker   224d   v1.29.6+aba1e8d
+worker01   Ready    worker                        183d   v1.29.6+aba1e8d
+worker02   Ready    worker                        183d   v1.29.6+aba1e8d
+[student@workstation ~]$ 
+
+```
+## Put the node on maintenence mode by using `cordon` command for worker02 node. 
+
+```
+oc adm cordon node/worker02
+```
+
+### For your references. 
+```
+[student@workstation ~]$ oc get nodes
+NAME       STATUS                     ROLES                         AGE    VERSION
+master01   Ready                      control-plane,master,worker   224d   v1.29.6+aba1e8d
+master02   Ready                      control-plane,master,worker   224d   v1.29.6+aba1e8d
+master03   Ready                      control-plane,master,worker   224d   v1.29.6+aba1e8d
+worker01   Ready                      worker                        183d   v1.29.6+aba1e8d
+worker02   Ready,SchedulingDisabled   worker                    			    183d   v1.29.6+aba1e8d
+```
+
+### Restart the VMi.
+```
+virtctl restart mariadb-server
+```
+
+### Check the VM
+```
+virtctl restart mariadb-server
+```
+### For your references. It is now, running on worker01 Node. 
+```
+[student@workstation ~]$ oc get vm,vmi
+NAME                                        AGE   STATUS    READY
+virtualmachine.kubevirt.io/mariadb-server   66m   Running   True
+
+NAME                                                AGE     PHASE     IP          NODENAME   READY
+virtualmachineinstance.kubevirt.io/mariadb-server   4m17s   Running   10.8.2.42   worker01   True
+```
