--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -52,3 +52,30 @@ virtctl create clone --source-name web1 --target-name web1-clonevm --name web1-c
 ```
 oc get virtualmachineclone
 ```
+#### Post checks!!
+
+```
+[student@workstation ~]$ oc get vm,vmi,dv,pvc
+NAME                                       AGE   STATUS    READY
+virtualmachine.kubevirt.io/database-kiwi   55m   Running   True
+virtualmachine.kubevirt.io/web1            45m   Stopped   False
+virtualmachine.kubevirt.io/web1-copy       3s    Stopped   False    👈👈👈👈👈👈
+virtualmachine.kubevirt.io/web2            44m   Running   True
+
+NAME                                               AGE   PHASE     IP           NODENAME   READY
+virtualmachineinstance.kubevirt.io/database-kiwi   54m   Running   10.8.0.66    master01   True
+virtualmachineinstance.kubevirt.io/web2            37m   Running   10.11.0.16   worker02   True
+
+NAME                                                                               PHASE       PROGRESS   RESTARTS   AGE
+datavolume.cdi.kubevirt.io/database-kiwi                                           Succeeded   100.0%                55m
+datavolume.cdi.kubevirt.io/restore-51336668-5d4c-4544-94d3-ccce11fd89a1-rootdisk   Succeeded   N/A                   3s   👈👈👈👈👈👈
+datavolume.cdi.kubevirt.io/rweb2                                                   Succeeded   100.0%                44m
+datavolume.cdi.kubevirt.io/web1                                                    Succeeded   100.0%                45m
+
+NAME                                                                          STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS                                          VOLUMEATTRIBUTESCLASS   AGE
+persistentvolumeclaim/database-kiwi                                           Bound    pvc-aaf89dfe-8a11-4af0-8e4d-af9775e5b935   10Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 55m
+persistentvolumeclaim/restore-51336668-5d4c-4544-94d3-ccce11fd89a1-rootdisk   Bound    pvc-aa693200-20de-46ca-8a20-62340897ba6b   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 4s     👈👈👈
+persistentvolumeclaim/rweb2                                                   Bound    pvc-b997328b-0e8b-4bb5-bf63-b041905159bd   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 44m
+persistentvolumeclaim/web1                                                    Bound    pvc-673c26ee-d76b-4946-bf04-d893a793f9ae   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 45m
+[student@workstation ~]$
+```
