--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -1,5 +1,5 @@
-# Prepare a VirtualMachine for cloning
-- Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-copy` by using Data Volumes
+# Quesation: You need to prepare a VirtualMachine for cloning.
+# Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-copy` by using Data Volumes
 ---
 
 ### Solution. 
