--- a/DO316/20. Question.md
+++ b/DO316/20. Question.md
@@ -19,8 +19,10 @@ oc new-project ha-node
 oc create -f https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/ha-node-template.yaml
 lab start advanced-import
 ```
-
-
+# Open a web browser and go to the web console URL.
+```
+https://console-openshift-console.apps.ocp4.example.com
+```
 # 1. Deploy Openshift Virtualization
 - Deploy `Openshift Virtualization` operator in the `openshift-cnv` Project.
 - Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
