Update 15. vSphere VirtualMachine.md

--- a/DO316/15. vSphere VirtualMachine.md
+++ b/DO316/15. vSphere VirtualMachine.md
@@ -6,12 +6,11 @@ lab start advanced-import
 
 # Import a vSphere VirtualMachine
 - One or more VirtualMachine images are available for browsing from your workstation system using the command: `elinks dump utility.lab.example.com:/exports-ocp4/ova` images
-- The Directory is also exported via NFS at: rhgls.example.com:/var/www/html/test/migration_images
 - Import the VirtualMachine called rhel9-web according to the following requirements:
 - The imported VirtualMachine exists in the `vms-import` project
-- The network of the source VirtualMachine has been mapped to the pod network of the imported VirtualMachine.
+- The network of the source VirtualMachine has been mapped to the `pod network` of the imported VirtualMachine.
 - The imported VirtualMachine used the `ocs-external-storagecluster-ceph-rbd-virtualization` storage class
-- The imported VirtualMachine is running
+- The imported VirtualMachine must be in running state.
 - VM has two networks: one that is using the `pod networking`, and the other that is using the `default/vm-private-net` network.
 - SSH to `utility` machine and curl the imported VM IP.
 ---
