Update 15. vSphere VirtualMachine.md

--- a/DO316/15. vSphere VirtualMachine.md
+++ b/DO316/15. vSphere VirtualMachine.md
@@ -34,7 +34,20 @@ lab start advanced-import
 
 
 
+At the end, Go to the project `vms-import`, then start the VM and check the IP address. 
+![image](https://github.com/user-attachments/assets/51e83c59-2f18-4c62-b5d9-da07dc693e3b)
 
-
+### Curl the IP address
+```
+[student@workstation ~]$ ssh lab@utility
+[lab@utility ~]$ curl 192.168.51.101
+<html>
+  <body>
+    <h1>Hello from VMware virtual machine!</h1>
+    <small>Provisioned on VMware ESXi 8.0.1</small>
+  </body>
+</html>
+[lab@utility ~]$
+```
 
 ### Follow the lab : Guided Exercise: Migrate Virtual Machines from Foreign Hypervisors from Redhat. 
