--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -5,7 +5,7 @@
 - Create a service name `ex316-kiwi-svc`
     Type: NodePort
     Pod Selector: app=web
-- TCP Port 3306 of each VM is connected to any worker node port 3306
+- TCP Port `3306` of each VM is connected to any workernode port on `23`
 - Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 - Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
 ---
@@ -31,6 +31,9 @@ oc get vm,vmi -l app=web
     - Type: NodePort
     - Pod Selector: app=web
     - TCP Port 3306 of each VM is connected to any worker node port 23
+### Traffic first, reach to WorkerNode on Port 23 and then it will be forward to VMi on Port 3306. It means `--tcp=23:3306`
+
+  
 ### Step 5. Create a service and modify the NodeSelector. In the end check the endpoints. It should point to web1 and web2 VM's IP.
 ```
 oc create service nodeport ex316-kiwi-svc --tcp=23:3306
