--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -1,9 +1,13 @@
-Task 1. : Create a users raja, suraj, punit and rajan with using `htpasswd` and all users must have the password `anishrana2001`
-Task 2. : Create a system `student` user and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
+## Task 1. : Create a users raja, suraj, punit and rajan with using `htpasswd` and all users must have the password `anishrana2001`
+---
+## Task 2. : Create a system `student` user and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
 - Add the lable `datacenter: paris` on node worker01 and worker02
-Task 3. : Deploy `Openshift Virtualization` operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
-Task 4. : Create a project named `banana`, `apple`, `kiwi` and `mango`.
-Task 5. : Assign the role to users. 
+---
+## Task 3. : Deploy `Openshift Virtualization` operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
+---
+## Task 4. : Create a project named `banana`, `apple`, `kiwi` and `mango`.
+---
+## Task 5. : Assign the role to users. 
 
 For project `banana`
 - As a cluster administrator, assign the roles to users so that
@@ -26,9 +30,9 @@ For project `kiwi`
 - A `raja` user should view and access the "VirtualMachine and its performance metrics".
 - User `raja` allowed to `start/stop/restart/pause` the VirtualMachines.
 - User `raja` should able to view the VMs.
+---
 
-
-Task 6. : Create a VirtualMachine in the `banana` project with below requirements. 
+## Task 6. : Create a VirtualMachine in the `banana` project with below requirements. 
 - User `raja` should create a VirtualMachine named `myvm-lan1` from template "Red Hat Enterprise Linux 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
 - The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
@@ -57,9 +61,9 @@ Task 6. : Create a VirtualMachine in the `banana` project with below requirement
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
+---
 
-
-Task 7. : Create a VirtualMachine in the `apple` project with below requirements. 
+## Task 7. : Create a VirtualMachine in the `apple` project with below requirements. 
 - User `suraj` should create a VirtualMachine named `myvm-lan2` from template "Red Hat Enterprise Linux 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
 - The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
@@ -87,9 +91,9 @@ Task 7. : Create a VirtualMachine in the `apple` project with below requirements
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
+---
 
-
-Task 8. : Create a VirtualMachine in the `kiwi` project with below requirements. 
+## Task 8. : Create a VirtualMachine in the `kiwi` project with below requirements. 
 - User `punit` should create a VirtualMachine named `myvm-lan3` from template "Red Hat Enterprise Linux 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-mariadb.qcow2`
 -  The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
@@ -120,15 +124,17 @@ Task 8. : Create a VirtualMachine in the `kiwi` project with below requirements.
 - The liveness probe tests the database server at TCP Port `3306`
 - The time (in seconds) after the VM instance starts before the liveness probe is initiated is `10`
 - The delay in seconds between performing probes is `5`
+---
 
 
 
-
-Task 9.  : Create a Network policy named `banana-acces-netpol` in the `banana` project.  Only the member of `banana` project should able to access of VM `myvm-lan1` on port 80.
-Task 10. : Create a Network policy named `apple-access-netpol` in the `apple` project. Only the member of `apple` project should able to access the VM `myvm-lan2`
-Task 11. : Create a Network policy named `kiwi-access-netpol` in the `kiwi` project. It should allow only the request coming from `banana` project on port `80`.
-
-Task 12. : Create a Template.
+## Task 9.  : Create a Network policy named `banana-acces-netpol` in the `banana` project.  Only the member of `banana` project should able to access of VM `myvm-lan1` on port 80.
+---
+## Task 10. : Create a Network policy named `apple-access-netpol` in the `apple` project. Only the member of `apple` project should able to access the VM `myvm-lan2`
+---
+## Task 11. : Create a Network policy named `kiwi-access-netpol` in the `kiwi` project. It should allow only the request coming from `banana` project on port `80`.
+---
+## Task 12. : Create a Template.
 - Create a template `tmprhl9small` in the `kiwi` project. 
 - The Template is clone of the build-in `rhel9-server-small` template.
 - Name of the VM should be `database-kiwi`.
@@ -156,10 +162,10 @@ Task 12. : Create a Template.
 ### Create and configure a VirtualMachine to survive a node failure so that the following conditions are true:
 - VirtualMachine is automatically schedule on either `master1.example.com` or `master2.example.com`
 - In the event of a failure of either node, the VirtualMachine is automatically started on the other node
+---
 
 
-
-Task 13. : Networking - Loadbalancing.
+## Task 13. : Networking - Loadbalancing.
 
 - Using the temaple `tmprhl9small` which you created previously, create two VirtualMachines named `web1` and `web2` in the `kiwi` project. 
 - Create a service name `ex316-kiwi-svc`
@@ -171,3 +177,23 @@ Task 13. : Networking - Loadbalancing.
 - These VMs should able to migrate between the nodes with label `datacenter: paris`
 - These VMs in the Project `kiwi` is not able to migrate to any other nodes
 - Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-clone` by using Data Volumes.
+---
+
+
+
+
+
+
+
+
+---
+## Solution.
+
+```
+oc login -u admin -p redhatocp  https://api.ocp4.example.com:6443
+```
+### Open a web browser and go to the web console URL.
+```
+https://console-openshift-console.apps.ocp4.example.com
+```
+## Click `htpasswd_provider` and log in as the `admin` user with `redhatocp` as the password.
