--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -2,6 +2,7 @@
 ---
 ## Task 2. : Create a system `student` user and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
 - Add the lable `datacenter: paris` on node worker01 and worker02
+- Add the label`external-network=true` on `worker01` and `worker02`
 ---
 ## Task 3. : Deploy `Openshift Virtualization` operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
 ---
@@ -56,6 +57,7 @@ For project `kiwi`
 	- The model for the first network interface is `virtio`
 
 - The Second Network Interface Configuration
+        - Install the NM operator and node should use the label `external-network=true`
 	- The second network interface name is `nic-0`
 	- The second network interface is attached to the `banana/database-network` network
 	- The second network interface type is `bridge`
