Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -8,16 +8,24 @@ oc -n openshift-config create secret generic htpasswd-secret --from-file htpassw
 ```
 
 # Configure User access and complete the below tasks.
+As a cluster administrator, assign the roles to users so that
 - Create a `banana` Project.
 - For project `banana`
 	- A `raja` user should able to Create and Manage VirtualMachine.
 	- A `suraj` user should view and access the "VirtualMachine performance metrics".
 	- User `suraj` allowed to start/stop/restart/pause the VirtualMachine
+        - A punit user should able to Create and Manage VirtualMachines.
 
 - Create a `apple` Project
 - For project `apple`
 	- User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
-  ### Please note that the password of raja and suraj users is "anishrana2001"
+        - A punit user should able to Create and Manage VirtualMachines.
+        - A raja user should view and access the "VirtualMachine and its performance metrics".
+        - User raja allowed to start/stop/restart/pause the VirtualMachines.
+        - User raja should able to view the VMs.
+
+
+  ### Please note that the password is "anishrana2001" of raja, punit and suraj users.
   ---
 ## Solution
 #### Create a `banana` Project.
@@ -29,7 +37,10 @@ oc new-project banana
 ```
 oc create rolebinding admin1 --clusterrole=admin --user=raja -n banana
 ```
-
+#### A punit user should able to Create and Manage VirtualMachine.
+```
+oc create rolebinding pinit-admin --clusterrole=admin --user=punit -n banana
+```
 #### A suraj user should view and access the "VirtualMachine performance metrics".
 ```
 oc create rolebinding view-suraj --clusterrole=view --user=suraj -n banana 
