Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -16,13 +16,13 @@ oc login -u harry -p review
 
 ### The `harry` user will create 3 groups, `leaders`, `developers` and `qa`. 
 ```
-oc adm group new leaders
+oc adm groups new leaders
 ```
 ```
-oc adm group new developers
+oc adm groups new developers
 ```
 ```
-oc adm group new qa
+oc adm groups new qa
 ```
 
 ## Post checks.
