--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -1,17 +1,107 @@
-## Task 1. : Create a users raja, suraj, punit and rajan with using `htpasswd` and all users must have the password `anishrana2001`
+## Task 1. : Create a users `raja`, `suraj`, `punit` and `rajan` with using `htpasswd` and all users must have the password `anishrana2001`
 ---
-## Task 2. : Create a system `student` user and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
+## Task 2. : Create a system user `student` and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
 - Add the lable `datacenter: paris` on node worker01 and worker02
-- Add the label`external-network=true` on `worker01` and `worker02`
 ---
+## Solution:
+```
+[student@workstation ~]$ ssh-keygen -t rsa
+Generating public/private rsa key pair.
+Enter file in which to save the key (/home/student/.ssh/id_rsa): 
+Enter passphrase (empty for no passphrase): 
+Enter same passphrase again: 
+Your identification has been saved in /home/student/.ssh/id_rsa
+Your public key has been saved in /home/student/.ssh/id_rsa.pub
+The key fingerprint is:
+SHA256:K698K5geckFKHOj7NnxN6n9fT1Cbrx24bI9JKHEr7XE student@workstation
+The key's randomart image is:
++---[RSA 3072]----+
+| ..              |
+|.. .             |
+|. o .          . |
+| o o          . o|
+|  o .   S. . . o |
+| .   . . .+ o o .|
+|  + oo= .o = E o.|
+|   Bo=.+..+ *.*o.|
+|  ..=.+=+..o.=oo.|
++----[SHA256]-----+
+[student@workstation ~]$ 
+
+
+[student@workstation ~]$ oc label nodes worker01 datacenter=paris
+node/worker01 labeled
+[student@workstation ~]$ oc label nodes worker02 datacenter=paris
+node/worker02 labeled
+[student@workstation ~]$ oc describe nodes worker01 | grep -iA 10 label | grep datacenter
+                    datacenter=paris
+[student@workstation ~]$ 
+```
 ## Task 3. : Deploy `Openshift Virtualization` operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
 ---
 ## Task 4. : Create a project named `banana`, `apple`, `kiwi` and `mango`.
 ---
-## Task 5. : Assign the role to users. 
+
+### Solution:
+```
+[student@workstation ~]$ oc new-project banana
+Now using project "banana" on server "https://api.ocp4.example.com:6443".
+
+You can add applications to this project with the 'new-app' command. For example, try:
+
+    oc new-app rails-postgresql-example
+
+to build a new example application in Ruby. Or use kubectl to deploy a simple Kubernetes application:
+
+    kubectl create deployment hello-node --image=registry.k8s.io/e2e-test-images/agnhost:2.43 -- /agnhost serve-hostname
+
+[student@workstation ~]$ oc new-project apple
+Now using project "apple" on server "https://api.ocp4.example.com:6443".
+
+You can add applications to this project with the 'new-app' command. For example, try:
+
+    oc new-app rails-postgresql-example
+
+to build a new example application in Ruby. Or use kubectl to deploy a simple Kubernetes application:
+
+    kubectl create deployment hello-node --image=registry.k8s.io/e2e-test-images/agnhost:2.43 -- /agnhost serve-hostname
+
+[student@workstation ~]$ oc new-project kiwi
+Now using project "kiwi" on server "https://api.ocp4.example.com:6443".
+
+You can add applications to this project with the 'new-app' command. For example, try:
+
+    oc new-app rails-postgresql-example
+
+to build a new example application in Ruby. Or use kubectl to deploy a simple Kubernetes application:
+
+    kubectl create deployment hello-node --image=registry.k8s.io/e2e-test-images/agnhost:2.43 -- /agnhost serve-hostname
+
+[student@workstation ~]$ oc new-project mango
+Now using project "mango" on server "https://api.ocp4.example.com:6443".
+
+You can add applications to this project with the 'new-app' command. For example, try:
+
+    oc new-app rails-postgresql-example
+
+to build a new example application in Ruby. Or use kubectl to deploy a simple Kubernetes application:
+
+    kubectl create deployment hello-node --image=registry.k8s.io/e2e-test-images/agnhost:2.43 -- /agnhost serve-hostname
+
+[student@workstation ~]$ 
+
+```
+## Task 5. : Create a Group and assign the role to users. 
+
+- Create 3 groups, `leaders`, `developers` and `qa`. 
+- Add `suraj` user in `leaders` group. 
+- Add `raja` user in `developers` group. 
+- Add `punit` and rajan users in the `qa` group.
 
 For project `banana`
 - As a cluster administrator, assign the roles to users so that
+- Group `leaders` should have the admin rights on project `banana`
+- Group `qa` should have view permission on project `banana`
 - A `raja` user should able to Create and Manage VirtualMachines.
 - A `suraj` user should view and access the "VirtualMachine and its performance metrics".
 - User `suraj` allowed to `start/stop/restart/pause` the VirtualMachines.
@@ -20,6 +110,8 @@ For project `banana`
 For project `apple`
 
 - As a cluster administrator, assign the roles to users so that
+- Group `leaders` should have the admin rights on this project.
+- Group `qa` should have edit permission on this project.
 - A `suraj` user should able to Create and Manage VirtualMachines.
 - A raja user should view and access the "VirtualMachine and its performance metrics".
 - User `punit` allowed to start/stop/restart/pause the VirtualMachines.
@@ -32,7 +124,36 @@ For project `kiwi`
 - User `raja` allowed to `start/stop/restart/pause` the VirtualMachines.
 - User `raja` should able to view the VMs.
 ---
-
+### Solution: 
+[student@workstation ~]$ oc adm groups new leaders
+group.user.openshift.io/leaders created
+[student@workstation ~]$ oc adm groups new developers
+group.user.openshift.io/developers created
+[student@workstation ~]$ oc adm groups new qa
+group.user.openshift.io/qa created
+[student@workstation ~]$ oc adm groups add-users leaders suraj
+group.user.openshift.io/leaders added: "suraj"
+[student@workstation ~]$ oc adm groups add-users developers raja
+group.user.openshift.io/developers added: "raja"
+[student@workstation ~]$ oc adm groups add-users qa punit
+group.user.openshift.io/qa added: "punit"
+[student@workstation ~]$ oc get groups
+NAME         USERS
+developers   raja
+leaders      suraj
+qa           punit
+[student@workstation ~]$ 
+```
+[student@workstation ~]$ oc create rolebinding raja-admin --clusterrole=admin --user=raja -n banana 
+rolebinding.rbac.authorization.k8s.io/raja-admin created
+[student@workstation ~]$ oc create rolebinding suraj-view --clusterrole=view --user=suraj -n banana 
+rolebinding.rbac.authorization.k8s.io/suraj-view created
+[student@workstation ~]$ oc create rolebinding suraj-edit --clusterrole=edit --user=suraj -n banana 
+rolebinding.rbac.authorization.k8s.io/suraj-edit created
+[student@workstation ~]$ oc create rolebinding punit-view --clusterrole=view --user=punit -n banana 
+rolebinding.rbac.authorization.k8s.io/punit-view created
+[student@workstation ~]$ 
+```
 ## Task 6. : Create a VirtualMachine in the `banana` project with below requirements. 
 - User `raja` should create a VirtualMachine named `myvm-lan1` from template "Red Hat Enterprise Linux 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
@@ -46,10 +167,12 @@ For project `kiwi`
 - The ssh Key "/home/student/.ssh/lab_rsa.pub" from user devops at workstation has been added as an authorized ssh key via the cloud-init definition
 - Once the VM boot up, install the httpd package and make sure that httpd sevice should be up and running after the vm reboot.
 - One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
-- Download the anish.html file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/anish.html" and upload on /var/www/html on the VM.
+- Download the anish.html file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/service.html" and upload on /var/www/html on the VM.
 - ServerName must be `devops-wala`
 
 #### Need to check.
+
+## Networking: 
 - The first Network Interface configuration
 	- The first Network interface name is `default`
 	- The First Network ineterface is attached to the `pod networking` (default) network
@@ -57,12 +180,14 @@ For project `kiwi`
 	- The model for the first network interface is `virtio`
 
 - The Second Network Interface Configuration
-        - Install the NM operator and node should use the label `external-network=true`
 	- The second network interface name is `nic-0`
 	- The second network interface is attached to the `banana/database-network` network
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
+
+- A Clusterlp Service allows Web Traffic into the myvm-lan1 VirtualMachine
+
 ---
 
 ## Task 7. : Create a VirtualMachine in the `apple` project with below requirements. 
@@ -106,9 +231,9 @@ For project `kiwi`
 -  The network interface name is `default`
 -  The user `rajan` with password `anishrana2001` exists in the cloud-init definition.
 -  The ssh Key "/home/student/.ssh/lab_rsa.pub" from user devops at workstation has been added as an authorized ssh key via the cloud-init definition
-- Once the VM boot up, install the mariadb and php packages. Make sure that httpd sevice should be up and running after the vm reboot.
-- One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
-#### Need to check.
+
+
+#### Networking: 
 - The first Network Interface configuration
 	- The first Network interface name is `default`
 	- The First Network ineterface is attached to the `pod networking` (default) network
@@ -121,6 +246,17 @@ For project `kiwi`
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
+
+
+  ## Once the VM boot up, install the `mariadb` and `php` packages. Make sure that `mariadb` sevice should be up and running after the vm reboot.
+- One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
+
+## Create a Service:
+- Create a service name ex316-kiwi-svc
+
+  - Type: NodePort
+  - Pod Selector: app=web
+  - TCP Port 3306
 ### Configure liveness probes.
 - Configure a liveness probe for this VM in the `kiwi` project and make sure following conditions are true:
 - The liveness probe tests the database server at TCP Port `3306`
