--- a/DO316/00. Task 6.md
+++ b/DO316/00. Task 6.md
@@ -9,12 +9,11 @@
 - The network interface name is `default`
 - The user `suraj` with password `anishrana2001` exists in the cloud-init definition
 - The ssh Key "/home/student/.ssh/lab_rsa.pub" from user devops at workstation has been added as an authorized ssh key via the cloud-init definition
-- Once the VM boot up, install the httpd package and make sure that httpd sevice should be up and running after the vm reboot.
-- One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
-- Download the anish.html file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/service.html" and upload on /var/www/html on the VM.
-- ServerName must be `devops-wala`
+
 
 #### Need to check.
+
+## Networking: 
 - The first Network Interface configuration
 	- The first Network interface name is `default`
 	- The First Network ineterface is attached to the `pod networking` (default) network
@@ -27,6 +26,14 @@
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
+## Configure the VM
+- Once the VM boot up, install the `httpd` package and make sure that `httpd sevice` should be up and running after the vm reboot.
+- One can download the yum.repo file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo`
+- Download the `anish.html` file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/anish.html` and upload on `/var/www/html` on the VM.
+- ServerName must be `devops-wala`
+- A Clusterlp Service allows Web Traffic into the `myvm-lan1` VirtualMachine
+- Create a route named `banana-web-route` so that above service will be availabled at address `anishrana2001-la-banana.apps.ocp4.example.com`
+
 ---
 
 
