--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -168,8 +168,6 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 - The ssh Key "/home/student/.ssh/lab_rsa.pub" from user devops at workstation has been added as an authorized ssh key via the cloud-init definition
 
 
-#### Need to check.
-
 ## Networking: 
 - The first Network Interface configuration
 	- The first Network interface name is `default`
@@ -184,9 +182,9 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
 ## Configure the VM
-- Once the VM boot up, install the httpd package and make sure that httpd sevice should be up and running after the vm reboot.
+- Once the VM boot up, install the `httpd` package and make sure that `httpd sevice` should be up and running after the vm reboot.
 - One can download the yum.repo file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo`
-- Download the anish.html file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/anish.html` and upload on `/var/www/html` on the VM.
+- Download the `anish.html` file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/anish.html` and upload on `/var/www/html` on the VM.
 - ServerName must be `devops-wala`
 - A Clusterlp Service allows Web Traffic into the `myvm-lan1` VirtualMachine
 - Create a route named `banana-web-route` so that above service will be availabled at address `anishrana2001-la-banana.apps.ocp4.example.com`
