--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -192,7 +192,7 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 ---
 
 ## Task 7. : Create a VirtualMachine in the `apple` project with below requirements. 
-- User `suraj` should create a VirtualMachine named `myvm-lan2` from template "Red Hat Enterprise Linux 9 VM"
+- User `suraj` should create a VirtualMachine named `myvm-lan2` from template "CenOS Stream 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
 - The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
 - The PVC size should be `30GiB`
