--- a/DO316/00. Task 8.md
+++ b/DO316/00. Task 8.md
@@ -20,7 +20,7 @@
 
 - The Second Network Interface Configuration
 	- The second network interface name is `nic-0`
-	- The second network interface is attached to the `apple/database-network` network
+	- The second network interface is attached to the `kiwi/database-network` network
 	- The second network interface type is `bridge`
 	- The IP address of the second network interface is provided by OpenShift
 	- The model for the second network interface is `virto`
