Update 00. Task 8.md

--- a/DO316/00. Task 8.md
+++ b/DO316/00. Task 8.md
@@ -34,6 +34,7 @@
   - Type: NodePort
   - Pod Selector: `app=web`
   - TCP Port `3306`
+  - Create a route named `kiwi-web-route` so that above service will be availabled at address `anishrana2001-la-kiwi.apps.ocp4.example.com`
 ### Configure liveness probes.
 - Configure a liveness probe for this VM in the `kiwi` project and make sure following conditions are true:
 - The liveness probe tests the database server at TCP Port `3306`
