--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -7,6 +7,23 @@
 ```
 oc project kiwi
 ```
+
+```
+apiVersion: cdi.kubevirt.io/v1beta1
+kind: DataVolume
+metadata:
+  name: web1-copy
+spec:
+  source:
+    pvc: 
+      namespace: "kiwi" 
+      name: "web1" 
+  storage: 
+    resources:
+      requests:
+        storage: 2Gi 
+    storageClassName: ocs-external-storagecluster-ceph-rbd-virtualization
+```
 ### Check the VM and VMi
 ```
 oc get vm,vmi
