--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -5,9 +5,10 @@
 - Create a service name `ex316-kiwi-svc`
     Type: NodePort
     Pod Selector: app=web
-- TCP Port `3306` of each VM is connected to any workernode port on `23`
+- TCP Port `21` of each VM is connected to any workernode port on `30021`
 - Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 - Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
+- port 21 , Database port = 3306
 ---
 
 ### Solution:
@@ -36,7 +37,7 @@ oc get vm,vmi -l app=web
   
 ### Step 5. Create a service and modify the NodeSelector. In the end check the endpoints. It should point to web1 and web2 VM's IP.
 ```
-oc create service nodeport ex316-kiwi-svc --tcp=23:3306
+oc create service nodeport ex316-kiwi-svc --tcp=21:30021
 oc edit service/ex316-kiwi-svc
 oc get endpoints ex316-kiwi-svc
 ```
