--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -274,33 +274,16 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 ## Task 11. : Create a Network policy named `kiwi-access-netpol` in the `kiwi` project. It should allow only the request coming from `banana` project on port `80`.
 ---
 ## Task 12. : Create a Template.
-- Create a template `tmprhl9small` in the `kiwi` project. 
-- The Template is clone of the build-in `rhel9-server-small` template.
-- Name of the VM should be `database-kiwi`.
-- Flavor small, with `1 CPU` and `2Gi RAM`
-- Storage space is `15Gi`
-- Disk source rhel-9.2-x86_64-kvm.qcow2 provided at http://utility.lab.example.com:8080/openshift4/images/mariadb-server.qcow2
-- storageCLassName: ocs-external-storagecluster-ceph-rbd-virtualization
-- The user `rahul` can login to these VirtualMachines on the console with password `anishrana2001`
-- The user `student` can login to these vitual machines via SSH without a password by using /home/opsdam/.ssh/id_rsa_ex316.pub key on workbench.example.com
-- When instantiated, these vitual machine will install the httpd RPM which is available from https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo
-
-#### Need to check.
-- The first Network Interface configuration
-	- The first Network interface name is default
-	- The First Network ineterface is attached to the pod networking (default) network
-	- The first network interface type is masquerade
-	- The model for the first network interface is virtio
-
-- The Second Network Interface Configuration
-	- The second network interface name is `nic-0`
-	- The second network interface is attached to the `apple/database-network` network
-	- The second network interface type is `bridge`
-	- The IP address of the second network interface is provided by OpenShift
-	- The model for the second network interface is virto
-### Create and configure a VirtualMachine to survive a node failure so that the following conditions are true:
-- VirtualMachine is automatically schedule on either `master1.example.com` or `master2.example.com`
-- In the event of a failure of either node, the VirtualMachine is automatically started on the other node
+# Create a VirtualMachine Template
+  - Create a project `kiwi` and a VirtualMachine template according to the following requirements
+  - The Template name is `tmprhl9small` in the `kiwi` project
+  - The Template is clone of the build-in rhel9-server-small template
+  - Flavor small, with 1 CPU and 2Gi RAM
+  - Storage space is 10Gi
+  - Disk source rhel-9.2-x86_64-kvm.qcow2 provided at  `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
+  - storageCLassName: `ocs-external-storagecluster-ceph-rbd-virtualization`
+  - The user `rahul` can login to these VirtualMachines on the console with password `anishrana2001`
+  - The user `vinod` can login to these vitual machines via SSH without a password by using `/home/opsdam/.ssh/id_rsa_ex316.pub` key on `jumpserver.example.com`
 ---
 
 
@@ -310,12 +293,17 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 - Create a service name `ex316-kiwi-svc`
     Type: NodePort
     Pod Selector: app=web
-- TCP Port `3306`
-- Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
-- Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
+- TCP Port `21` of VM and workernodes port should be `30021`
+- Create a route named `web-route` so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
+- Perform the SSH to `anishrana2001-lb.apps.ocp4.example.com`
 - These VMs should able to migrate between the nodes with label `datacenter: paris`
-- These VMs in the Project `kiwi` is not able to migrate to any other nodes
+- These VMs in the Project `kiwi` is not able to migrate to any other nodes.
 - Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-clone` by using Data Volumes.
+- Create a snapshot of this VM and named 'web1-copy`.
+
+### VirtualMachine to survive a node failure so that the following conditions are true:
+- VirtualMachine is automatically schedule on either `worker01.example.com` or `worker02.example.com`
+- In the event of a failure of either node, the VirtualMachine is automatically started on the other node
 ---
 
 
