Update 00. Task 3.md

--- a/DO316/00. Task 3.md
+++ b/DO316/00. Task 3.md
@@ -1,1 +1,50 @@
 ## Task 3. : Deploy Openshift Virtualization operator in the openshift-cnv Project. Install and Configure Operator with the name kubevirt-hyperconverged in same Project.
+
+## Solution.
+
+```
+oc login -u admin -p redhatocp  https://api.ocp4.example.com:6443
+```
+### Open a web browser and go to the web console URL.
+```
+https://console-openshift-console.apps.ocp4.example.com
+```
+## Click `htpasswd_provider` and log in as the `admin` user with `redhatocp` as the password.
+
+## Step 1. Open the Redhat Console GUI.
+![image](https://github.com/user-attachments/assets/511e6bca-0160-4793-801e-689780157dea)
+
+
+## Step 2. Search for `virtualization`
+
+![image](https://github.com/user-attachments/assets/afc5ea35-de7f-4306-9588-8d14f33fd3c4)
+
+## Step 3. Click on Install.
+
+![image](https://github.com/user-attachments/assets/55b7c0d9-0f51-4acd-b34e-c08efb9b02e4)
+
+
+## Step 4. 
+![image](https://github.com/user-attachments/assets/9688d243-70fa-4972-871a-6e8464438533)
+
+## Step 5. Click on "Create HyperConverged"
+
+![image](https://github.com/user-attachments/assets/8cd66122-06bd-4720-82dc-87208e3789dc)
+
+## Step 6. Write the name ""
+![image](https://github.com/user-attachments/assets/eb9ad5b3-9dc0-4b30-9f5b-d30a217deed9)
+
+## Step 7. 
+![image](https://github.com/user-attachments/assets/2fa96e59-7b49-4de5-b032-ce8cfc7eeef5)
+
+## Step 8. 
+
+![image](https://github.com/user-attachments/assets/e9a3ef93-cafc-447e-b7f8-0749df8c446e)
+
+## Step 9. 
+
+![image](https://github.com/user-attachments/assets/ba47b05f-0d44-4808-b2d3-7fadb14ffa5d)
+
+## Step 10.
+
+![image](https://github.com/user-attachments/assets/76827bf5-9db1-4e4e-b938-d0968e7c711c)
