--- a/DO316/00. Task 3.md
+++ b/DO316/00. Task 3.md
@@ -1,4 +1,4 @@
-## Task 3. : Deploy Openshift Virtualization operator in the openshift-cnv Project. Install and Configure Operator with the name kubevirt-hyperconverged in same Project.
+## Task 3. : Deploy Openshift Virtualization operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
 
 ## Solution.
 
