--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -28,7 +28,7 @@ For project `banana`
 For project `apple`
 
 - As a cluster administrator, assign the roles to users so that
-- Group `leaders` should have the admin rights on this project.
+- Group `developes` should have the admin rights on this project.
 - Group `qa` should have edit permission on this project.
 - A `suraj` user should able to Create and Manage VirtualMachines.
 - A raja user should view and access the "VirtualMachine and its performance metrics".
